Added Comments To Code

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
+  <!-- Navigation Bar - should display the xCruise logo -->
+  <!-- Navigation Bar - should have links to Home, Destinations, and Deals -->
+  <!-- Navigation Bar - should have a background color of #000033 -->
   <div class="navbar">
     <div class="logo">
-      <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/xCruise-logo.png?raw=true" width="80vw"
-        height="100vh" />
+      <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/xCruise-logo.png?raw=true" width="80vw" height="100vh" />
     </div>
 
     <nav class="menu">
@@ -22,10 +24,19 @@
       <a>Deals</a>
     </nav>
   </div>
+
+  <!-- Hero Section - should display the main heading -->
+  <!-- Hero Section - should have a Book Now button -->
+  <!-- Hero Section - should display the hero image as a background -->
   <div class="hero">
     <h1>DISCOVER THE BEAUTY OF CRUISING WITH US</h1>
     <button>Book Now</button>
   </div>
+
+  <!-- Discover Section - should display the heading "DISCOVER OUR DESTINATIONS" -->
+  <!-- Discover Section - should display popular destinations with images -->
+  <!-- Discover Section - should have cards with a cursor pointer on hover -->
+  <!-- Discover Section - popular pills should have a shadow -->
   <div class="discover">
     <div class="inner-discover">
       <div class="heading">
@@ -38,23 +49,17 @@
           <div>Popular:</div>
           <div class="pills">
             <div>
-              <img
-                src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/weekend-cruises-pill.png?raw=true" /><span>
-                Weekend Cruises</span>
+              <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/weekend-cruises-pill.png?raw=true" /><span> Weekend Cruises</span>
             </div>
           </div>
           <div class="pills">
             <div>
-              <img
-                src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/summer-cruises-pill.png?raw=true" /><span>
-                Summer Cruises</span>
+              <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/summer-cruises-pill.png?raw=true" /><span> Summer Cruises</span>
             </div>
           </div>
           <div class="pills">
             <div>
-              <img
-                src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/exotic-cruises-pill.png?raw=true" /><span>
-                Exotic Cruises</span>
+              <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/exotic-cruises-pill.png?raw=true" /><span> Exotic Cruises</span>
             </div>
           </div>
         </div>
@@ -62,41 +67,36 @@
     </div>
     <div class="cards">
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/caribbean-cruise.png?raw=true"
-          alt="Caribbean & The Bahamas">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/caribbean-cruise.png?raw=true" alt="Caribbean & The Bahamas">
       </div>
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/mediterranean-cruise.png?raw=true"
-          alt="Mediterranean">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/mediterranean-cruise.png?raw=true" alt="Mediterranean">
       </div>
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/dubai-cruise.png?raw=true"
-          alt="Dubai & Abu Dhabi">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/dubai-cruise.png?raw=true" alt="Dubai & Abu Dhabi">
       </div>
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/northern-europe-cruise.png?raw=true"
-          alt="Northern Europe">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/northern-europe-cruise.png?raw=true" alt="Northern Europe">
       </div>
       <div class="card">
         <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/redsea-cruise.png?raw=true" alt="Red Sea">
       </div>
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/bermuda-beach-cruise.png?raw=true"
-          alt="Bermuda">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/bermuda-beach-cruise.png?raw=true" alt="Bermuda">
       </div>
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/south-africa-cruise.png?raw=true"
-          alt="South Africa">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/south-africa-cruise.png?raw=true" alt="South Africa">
       </div>
       <div class="card">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/south-america-cruise.png?raw=true"
-          alt="South America">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/south-america-cruise.png?raw=true" alt="South America">
       </div>
       <div class="card">
         <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/asia-cruise.png?raw=true" alt="Asia">
       </div>
     </div>
   </div>
+
+  <!-- Contact Us Section - should display the Contact Us section with correct information -->
   <div id="contact">
     <h3>Contact Us</h3>
     <div class="contact_info">
@@ -112,6 +112,8 @@
       </div>
     </div>
   </div>
+
+  <!-- Footer Section - should display the Footer section with all elements correctly -->
   <div class="footer">
     <div class="footer-item">
       <h3>Top Destinations</h3>
@@ -131,7 +133,7 @@
     </div>
     <div class="footer-item">
       <h3>About Us</h3>
-      <p>Abous xCruise</p>
+      <p>About xCruise</p>
       <p>Contact Us</p>
       <p>Privacy Policy</p>
       <p>Work For Us</p>
@@ -148,7 +150,6 @@
         <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/gmail-icon.png?raw=true">
       </div>
     </div>
-  </div>
   </div>
   <div class="footer_rights">© 2024 xCruise In. All rights reserved</div>
 </body>
